kubernetes-monitoring/web-app-exporter-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: nginx
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket:
            port: 8000
        volumeMounts:
          - name: app
            mountPath: /app
          - name: nginx-conf
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
            readOnly: true
        resources:
            limits:
              cpu: "0.1"
              memory: "100Mi"
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:0.8.0
        args: ['-nginx.scrape-uri', 'http://localhost:8000/basic_status']
        ports:
          - name: nginx-exporter
            containerPort: 9113
        resources:
          limits:
            cpu: "0.1"
            memory: "100Mi"
      volumes:
        - name: app
          emptyDir: {}
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
